--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,18 @@
         <activity
             android:name=".NumbersActivity"
             android:label="@string/category_numbers" />
-        <activity android:name=".PhrasesActivity" />
-        <activity android:name=".ColorsActivity" />
-        <activity android:name=".FamilyMembersActivity"></activity>
+
+        <activity
+            android:name=".PhrasesActivity"
+            android:label="@string/category_phrases" />
+
+        <activity
+            android:name=".ColorsActivity"
+            android:label="@string/category_colors" />
+
+        <activity
+            android:name=".FamilyMembersActivity"
+            android:label="@string/category_family" />
     </application>
 
 </manifest>
